--- a/projects.html
+++ b/projects.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Tuna | Projects</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tuna Gökgöz | CV</title>
 
-  <!-- Bootstrap + Mobirise theme -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mobirise-icons@2.0.0/mobirise2.css">
+  <!-- Repo kökü (GH Pages: /my-website/) -->
+  <base href="/my-website/">
+
+  <!-- Fonts & libs -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mobirise/mobirise5@main/m5-theme/css/style.css">
-  <link rel="stylesheet" href="style.css">
 
+  <!-- Site CSS -->
+  <link rel="stylesheet" href="style.css">        <!-- kendi stilin -->
+  <link rel="stylesheet" href="assets/theme.css"> <!-- light/dark tema -->
+  <meta name="color-scheme" content="light dark">
+
+  <!-- Scripts -->
+  <script defer src="assets/theme.js"></script>   <!-- toggle + pill mesaj -->
+  <script defer src="assets/navbar.js"></script>  <!-- tek yerden navbar -->
+
+  <!-- Sayfaya özel ufak stil -->
   <style>
-    /* Shared pill style (colour comes from JS) */
-    .badge.tag-pill{border:1px solid currentColor;border-radius:9999px;padding:.35em .6em;font-weight:500;background:transparent}
+    .badge.tag-pill{
+      border:1px solid currentColor;
+      background:transparent;
+      padding:.35em .6em;
+      border-radius:9999px;
+      font-weight:500;
+    }
   </style>
 </head>
+
 <body>
 
 <!-- Navbar -->
-<nav class="bg-white shadow p-4 d-flex justify-content-between align-items-center">
-  <h1 class="h4 fw-bold mb-0">Tuna</h1>
-  <ul class="d-flex gap-3 list-unstyled mb-0">
-    <li><a href="index.html" class="text-decoration-none">Home</a></li>
-    <li><a href="cv.html" class="text-decoration-none">CV</a></li>
-    <li><a href="projects.html" class="text-decoration-none fw-semibold">Projects</a></li>
-  </ul>
-</nav>
+<div id="site-nav"></div>
+
 
 <section class="py-5 text-center">
   <div class="container">
