--- a/projects/vulnversity.html
+++ b/projects/vulnversity.html
@@ -2,27 +2,55 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link href="../style.css" rel="stylesheet" />
-  <!-- Highlight.js GitHub theme -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css" integrity="sha512-BiQWMqhH+asly72mVHYhlv80EJVf76wrWDnXvJYtmM0QIScI7UILcq/TPWkqB6XSMWUTy7oQZgpE1PV6b8PQVA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🛡️ Vulnversity – TryHackMe Walkthrough</title>
+
+  <!-- GH Pages repo kökü -->
+  <base href="/my-website/">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+
+  <!-- Senin stil + tema -->
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/theme.css">
+  <meta name="color-scheme" content="light dark" />
+
+  <!-- Highlight.js (light/dark otomatik) -->
+  <link id="hljs-light" rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css"
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link id="hljs-dark" rel="stylesheet" disabled
+        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css"
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+
+  <!-- Tema toggle + dinamik navbar -->
+  <script defer src="assets/theme.js"></script>
+  <script defer src="assets/navbar.js"></script>
+
+  <!-- Kod blokları için ufak stil -->
   <style>
-    pre{margin-bottom:1.5rem;border-radius:.5rem;overflow-x:auto;background:#f6f8fa;padding:1rem}
+    pre{margin-bottom:1.5rem;border-radius:.5rem;overflow-x:auto;padding:1rem;background:#f6f8fa}
     pre code{font-family:SFMono-Regular,Menlo,Consolas,"Courier New",monospace;font-size:.9rem;line-height:1.4}
+    :root[data-theme="dark"] pre{ background:#0f141b; }
   </style>
+
+  <!-- HLJS temasını data-theme'e göre senkronla -->
+  <script>
+    (function(){
+      const root = document.documentElement;
+      const light = document.getElementById('hljs-light');
+      const dark  = document.getElementById('hljs-dark');
+      function sync(){ const d = root.getAttribute('data-theme') === 'dark'; light.disabled=d; dark.disabled=!d; }
+      new MutationObserver(sync).observe(root, {attributes:true, attributeFilter:['data-theme']});
+      document.addEventListener('DOMContentLoaded', sync);
+    })();
+  </script>
 </head>
+
 <body class="bg-gray-50 text-gray-800 font-sans min-h-screen flex flex-col">
-  <!-- Navbar -->
-  <nav class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-xl font-bold">Tuna</h1>
-    <ul class="flex gap-4">
-      <li><a href="../index.html" class="hover:text-blue-500">Home</a></li>
-      <li><a href="../cv.html" class="hover:text-blue-500">CV</a></li>
-      <li><a href="../projects.html" class="hover:text-blue-500">Projects</a></li>
-    </ul>
-  </nav>
+  <!-- Navbar Hook -->
+  <div id="site-nav"></div>
 
   <main class="flex-grow flex justify-center px-4 py-10">
     <article class="w-full max-w-4xl bg-white shadow-lg rounded-2xl p-8 space-y-10">
