--- a/cv.html
+++ b/cv.html
@@ -6,7 +6,7 @@
   <title>Tuna Gökgöz | CV</title>
 
   <!-- Repo kökü (GH Pages: /my-website/) -->
-  <base href="/my-website/">
+  
 
   <!-- Fonts & libs -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -14,12 +14,12 @@
 
   <!-- Site CSS -->
   <link rel="stylesheet" href="style.css">        <!-- kendi stilin -->
-  <link rel="stylesheet" href="assets/theme.css"> <!-- light/dark tema -->
+  <link rel="stylesheet" href="/my-website/assets/theme.css"> <!-- light/dark tema -->
   <meta name="color-scheme" content="light dark">
 
   <!-- Scripts -->
-  <script defer src="assets/theme.js"></script>   <!-- toggle + pill mesaj -->
-  <script defer src="assets/navbar.js"></script>  <!-- tek yerden navbar -->
+  <script defer src="/my-website/assets/theme.js"></script>   <!-- toggle + pill mesaj -->
+  <script defer src="/my-website/assets/navbar.js"></script>  <!-- tek yerden navbar -->
 
   <!-- Sayfaya özel ufak stil -->
   <style>
