--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Tuna</title>
 
   <!--!! ÖNEMLİ: repo kökü -->
-  <base href="/my-website/">
+  
 
   <!-- Bubbly font -->
   <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet"/>
@@ -316,10 +316,10 @@ h1, h2, h3 { margin: 0; }
 .carousel-next  { right: 1rem; }
 </style>
 <!-- Dark/Light Mode -->
-<link rel="stylesheet" href="assets/theme.css">
+<link rel="stylesheet" href="/my-website/assets/theme.css">
 <meta name="color-scheme" content="light dark">
-<script defer src="assets/theme.js"></script>
-<script defer src="assets/navbar.js"></script>
+<script defer src="/my-website/assets/theme.js"></script>
+<script defer src="/my-website/assets/navbar.js"></script>
 
 </head>
 <body>
