--- a/projects/vulnversity.html
+++ b/projects/vulnversity.html
@@ -5,15 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🛡️ Vulnversity – TryHackMe Walkthrough</title>
 
-  <!-- GH Pages repo kökü -->
-  <base href="/my-website/">
+ 
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
   <!-- Senin stil + tema -->
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="assets/theme.css">
+  <link rel="stylesheet" href="/my-website/assets/theme.css">
   <meta name="color-scheme" content="light dark" />
 
   <!-- Highlight.js (light/dark otomatik) -->
@@ -25,8 +24,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
 
   <!-- Tema toggle + dinamik navbar -->
-  <script defer src="assets/theme.js"></script>
-  <script defer src="assets/navbar.js"></script>
+  <script defer src="/my-website/assets/theme.js"></script>
+  <script defer src="/my-website/assets/navbar.js"></script>
 
   <!-- Kod blokları için ufak stil -->
   <style>
