--- a/projects/wonderland.html
+++ b/projects/wonderland.html
@@ -52,12 +52,12 @@
   </script>
 </head>
 
-<body class="bg-gray-50 text-gray-800 font-sans min-h-screen flex flex-col">
+<body class="font-sans min-h-screen flex flex-col">
   <!-- Navbar Hook -->
   <div id="site-nav"></div>
 
   <main class="flex-grow flex justify-center px-4 py-10">
-    <article class="w-full max-w-4xl bg-white shadow-lg rounded-2xl p-8 space-y-10">
+    <article class="article w-full max-w-4xl bg-white shadow-lg rounded-2xl p-8 space-y-10">
       <!-- Header -->
       <header class="space-y-4">
         <h2 class="text-3xl font-bold text-gray-900"> Wonderland – TryHackMe CTF Walkthrough</h2>
