--- a/cv.html
+++ b/cv.html
@@ -41,7 +41,7 @@
       <!-- Header -->
       <header class="flex flex-col sm:flex-row items-center sm:items-start gap-6">
         <!-- Profile Picture -->
-        <img src="https://framerusercontent.com/images/syYpn6kwym2gSPpLBqXzSwp8.svg" alt="avatar" class="w-32 h-32 rounded-full shadow-md" />
+        <img src="assets/images/photo.jpeg" alt="avatar" class="w-32 h-32 rounded-full shadow-md" />
         <!-- Info + Buttons -->
         <div>
           <h2 class="text-3xl font-bold text-gray-900">Tunahan Gökgöz</h2>
@@ -193,7 +193,7 @@
 
       <!-- Download Button -->
       <div class="text-center">
-        <a href="content/cv/cv3.pdf" class="inline-block bg-blue-600 text-white font-medium px-6 py-3 rounded-full shadow hover:bg-blue-700 transition">
+        <a href="assets/pdfs/cv3 copy.pdf" class="inline-block bg-blue-600 text-white font-medium px-6 py-3 rounded-full shadow hover:bg-blue-700 transition">
           📄 Download PDF
         </a>
       </div>
